# sekha-docker

./: .env.v2.example  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  README.md  TESTING.md  V2.0_IMPLEMENTATION_SUMMARY.md  V2.0_REVIEW_CHECKLIST.md  config.yaml.example  deploy-docker.sh  deploy-k8s.sh  docker-compose.v2.yml  docker-compose.yml  install-local.sh  requirements-test.txt  sekha-config-schema.json  smoke-test.sh
.github/workflows/: build-and-publish.yml  build.yml  ci.yml  deployment-tests.yml  docker-build.yml  release.yml
cloud/aws/: ecs-task-definition.json  main.tf
cloud/azure/: deploy-azure.bicep  deploy.sh
cloud/gcp/: deploy.sh
cloud/tests/: test_terraform.sh
docker/: .env.example  Dockerfile.proxy  Dockerfile.python  Dockerfile.python.dev  Dockerfile.python.prod  Dockerfile.rust  Dockerfile.rust.dev  Dockerfile.rust.prod  config.prod.toml  deploy-cloud.sh  deploy-docker.sh  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  install-local.sh
docs/: DEPLOYMENT.md  E2E_TESTING.md  MODULE_4_5_COMPLETION_SUMMARY.md  MODULE_4_GAPS_FIXED.md  MODULE_4_README.md  MODULE_5_README.md  PRE_DEPLOYMENT_CHECKLIST.md  QUICKSTART_WINDOWS.md  V2_IMPLEMENTATION_STATUS.md  WINDOWS_INSTALL.md  configuration-v2.md  migration-guide-v2.md  vision-support.md
helm/tests/: test_helm.sh  (+1 more)
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  pvc.yaml  service.yaml
scripts/: migrate-config-v2.sh
tests/: test_deployment.py  test_docker_compose.rs  test_e2e_v2.py
(+10 files in other folders)
